0.10.0 (2015-??-??)
===================

Bug Handling
------------

* Set hostname correctly in the Graylog decoder (#1663).

* Add sample rate support for gauge type in StatsdInput.

0.10.0b1 (2015-08-07)
=====================

Backwards Incompatibilities
---------------------------

* `PluginHelper.PipelinePack` method now returns `(*PipelinePack, err)` values
  instead of just `*PipelinePack`.

Features
--------

* Allow multiple sandbox module directories to be specified (#1525).

* Add Nginx stub status lua sandbox decoder.

* Added support for SIGUSR2 signal for use when Heka is wedged, triggers a Heka
  pipeline report to the console, abort and serialize of all sandboxes, and a
  shutdown.

* InputRunner and router's `Inject` methods each now return an error that can
  be checked to verify successful message injection.

* Added `SplitStreamNullSplitterToEOF` to SplitterRunner interface so input
  plugins can avoid generating messages with whatever happens to come back from
  a `Read()` call.

* Validate the buffer max_file_size is greater than MAX_RECORD_SIZE (#1623).

Bug Handling
------------

* Validate the buffer max_file_size is greater than MAX_RECORD_SIZE (#1623).

* Fixed ProcessInput hangs when splitter is defined (#1620, #1644).

* `heka.all-report` and `heka.memstat` messages are now protobuf encoded before
  being injected into the router (#1659).

* Fixed ProcessInput not getting process's full output when NullSplitter is in
  use (#1645).

0.10.0b0 (2015-07-13)
=====================

Backwards Incompatibilities
---------------------------

* Major overhaul of filter and output plugin APIs to support disk buffering
  (#1378).

* Go 1.4 now required for building.

* Deprecated the read_next_field() sandbox API; it is targeted for removal in
  0.11.0 (#1602).

* Removed unused PipelinePack.Decoded attribute.

* LogOutput will write data to stdout instead of stderr (#1515).
